--- a/scss/header-footer/_footer.scss
+++ b/scss/header-footer/_footer.scss
@@ -4,7 +4,7 @@ footer{
     .container{
         .row{
             div{
-                h3-footer{
+                .h3-footer{
                 margin-top: 10px;
                 }
 
