--- a/scss/media-queris/_media-queris.scss
+++ b/scss/media-queris/_media-queris.scss
@@ -1,150 +1,465 @@
 @media (max-width: 1440px){
-    .d-block{
-        height: 350px;
-        width: 1200px;
+    .main-productos{
+        .carousel{
+            .carousel-inner{
+                div{
+                    .d-block{
+                    height: 450px;
+                    width: 1200px;
+                    margin-left: 70px;
+                    }
+                }
+            }
+        }
     }
-    .sucursales img{
-        height: 400px;
-        width: 600px;
+
+    .main-sucursales{
+        .sucursales{
+            .figure-img-sucursales{
+            height: 400px;
+            width: 600px;
+            }
+            iframe{
+            height: 400px;
+            width: 600px;
+            }
+        }
     }
-    .sucursales iframe{
-        height: 400px;
-        width: 600px;
-    }
-    .img-libreria img{
-        width: 600px;
-        height: 350px;
-    }
+
+    .main-nosotros{
+        .accordion{
+            div{
+                .accordion-collapse{
+                    .accordion-body{
+                        .img-libreria{
+                            img{
+                            width: 600px;
+                            height: 350px;
+                            }
+                        }
+                    }
+                }
+            }
+        }    
+    }  
 }
 
 
 @media (max-width: 1024px){
-    .img-local{
-        width: 450px;
-        height: 300px;
+    .main-index{
+        .div-local{
+            .img-local{
+                width: 450px;
+                height: 300px;
+            }
+            
+            .mapa-iframe{
+                width: 450px;
+                height: 300px;
+            }
+        }
+
+        .carousel{
+            .carousel-inner{
+                div{
+                    .d-block{
+                    height: 300px;
+                    width: 950px;
+                    margin-left: 35px;
+                    }
+                }
+            }
+        }
+
+        .h3-libros{
+            margin-left: 15px;
+            margin-right: 15px;
+        }
     }
-    .mapa-iframe{
-        width: 450px;
-        height: 300px;
+
+    .main-productos{
+        .carousel{
+            .carousel-inner{
+                div{
+                    .d-block{
+                    height: 300px;
+                    width: 950px;
+                    margin-left: 35px;
+                    }
+                }
+            }
+        }
+
+        .h3-libros{
+            margin-left: 15px;
+            margin-right: 15px;
+        }
     }
-    .d-block{
-        height: 300px;
-        width: 950px;
-        margin-left: 35px;
+
+    .main-sucursales{
+        .figure-sucursales{
+            .sucursales{
+                .figure-img-sucursales{
+                height: 300px;
+                width: 400px;
+                }
+
+                iframe{
+                height: 300px;
+                width: 400px;
+                }   
+            }
+        }        
     }
-    .h3-libros{
-        margin-left: 15px;
-        margin-right: 15px;
-    }
-    .sucursales img{
-        height: 300px;
-        width: 400px;
-    }
-    .sucursales iframe{
-        height: 300px;
-        width: 400px;
-    }
-    .sucursales img{
-        width: 400px;
-        height: 300px;
-    }
-    .img-libreria img{
-        width: 450px;
-        height: 250px;
+
+    .main-nosotros{
+        .accordion{
+            div{
+                .accordion-collapse{
+                    .accordion-body{
+                        .img-libreria{
+                            img{
+                            width: 450px;
+                            height: 250px;
+                            }
+                        }
+                    }
+                }
+            }
+        }    
     }
 }
 
 @media (max-width: 768px){
-    .img-local{
-        width: 300px;
-        height: 250px;
+    .main-index{
+        .div-local{
+            .img-local{
+                width: 300px;
+                height: 250px;
+            }
+            
+            .mapa-iframe{
+                width: 300px;
+                height: 250px;
+            }
+        }
+
+        .carousel{
+            .carousel-inner{
+                div{
+                    .d-block{
+                    height: 300px;
+                    width: 750px;
+                    margin-left: 10px;
+                    }
+                }
+            }
+        }
+
+        .containerFigure{ 
+            .figure{
+            margin-left: 5px;
+            margin-right: 5px;
+            }
+        
+            .figure-img{
+            width: 200px;
+            height: 250px;
+            }
+        }
+
+        .h3-libros{
+            margin-left: 15px;
+            margin-right: 15px;   
+        }
     }
-    .mapa-iframe{
-        width: 300px;
-        height: 250px;
+
+    .main-productos{
+        .carousel{
+            .carousel-inner{
+                div{
+                    .d-block{
+                    height: 300px;
+                    width: 750px;
+                    margin-left: 10px;
+                    }
+                }
+            }
+        }
+
+        .containerFigure{ 
+            .figure{
+            margin-left: 5px;
+            margin-right: 5px;
+            }
+        
+            .figure-img{
+            width: 200px;
+            height: 250px;
+            }
+        }
+
+        .h3-libros{
+            margin-left: 15px;
+            margin-right: 15px;   
+        }
     }
-    .figure{
-        margin-left: 5px;
-        margin-right: 5px;
+
+    .main-sucursales{
+        .figure-sucursales{
+            .sucursales{
+                .figure-img-sucursales{
+                height: 200px;
+                width: 300px;
+                }
+    
+                iframe{
+                height: 200px;
+                width: 300px;
+                }
+            }
+        }   
     }
-    .d-block{
-        height: 300px;
-        width: 750px;
-        margin-left: 10px;
-    }
-    .figure-img{
-        width: 200px;
-        height: 250px;
-    }
-    .sucursales iframe{
-        height: 200px;
-        width: 300px;
-    }
-    .sucursales img{
-        width: 300px;
-        height: 200px;
-    }
-    .img-libreria img{
-        width: 300px;
-        height: 250px;
+
+    .main-nosotros{
+        .accordion{
+            div{
+                .accordion-collapse{
+                    .accordion-body{
+                        .img-libreria{
+                            img{
+                            width: 300px;
+                            height: 250px;
+                            }
+                        }
+                    }
+                }
+            }
+        }    
     }
 }
 
 @media (max-width: 425px){
-    .div-local{
-        display: flex;
-        flex-direction: column;
+
+    .main-index{
+        .div-local{
+            display: flex;
+            flex-direction: column;
+
+            .img-local{
+                width: 300px;
+                height: 250px;
+                margin-left: 10px;
+                margin-right: 10px;
+            }
+            
+            .mapa-iframe{
+                width: 300px;
+                height: 250px;
+                margin-left: 10px;
+                margin-right: 10px;
+            }
+        }
+
+        .carousel{
+            .carousel-inner{
+                div{
+                    .d-block{
+                        height: 150px;
+                        width: 400px;
+                        margin-left: 5px;
+                    }
+                }
+            }
+        }
+
+        .containerFigure{ 
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            .figure{
+            margin-left: 5px;
+            margin-right: 5px;
+            }
+        
+            .figure-img{
+            width: 200px;
+            height: 250px;
+            }
+        }
+
+        .h3-libros{
+            display: flex;
+            justify-content: center;
+            margin-left: 30px;
+            margin-right: 30px;  
+        }
     }
-    .img-local{
-        width: 300px;
-        height: 250px;
-        margin-left: 10px;
-        margin-right: 10px;
+
+    .main-productos{
+        .carousel{
+            .carousel-inner{
+                div{
+                    .d-block{
+                        height: 150px;
+                        width: 400px;
+                        margin-left: 5px;
+                    }
+                }
+            }
+        }
+
+        .containerFigure{ 
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            .figure{
+            margin-left: 5px;
+            margin-right: 5px;
+            }
+        
+            .figure-img{
+            width: 200px;
+            height: 250px;
+            }
+        }
+
+        .h3-libros{
+            display: flex;
+            justify-content: center;
+            margin-left: 30px;
+            margin-right: 30px;  
+        }
     }
-    .mapa-iframe{
-        width: 300px;
-        height: 250px;
-        margin-left: 10px;
-        margin-right: 10px;
+
+    .main-sucursales{
+        .sucursales{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            
+            .figure-img-sucursales{
+            height: 200px;
+            width: 300px;
+            margin-bottom: 10px;
+            }
+
+            iframe{
+            height: 200px;
+            width: 300px;
+            margin-bottom: 10px;
+            }
+        }
     }
-    .d-block{
-        height: 150px;
-        width: 400px;
-        margin-left: 5px;
+
+    .main-nosotros{
+        .accordion{
+            div{
+                .accordion-collapse{
+                    .accordion-body{
+                        .img-libreria{
+                            display: flex;
+                            flex-direction: column;
+                            align-items: center;
+
+                            img{
+                            width: 300px;
+                            height: 250px;
+                            }
+                        }
+                    }
+                }
+            }
+        }    
     }
-    .containerFigure{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+
+    footer{
+        .container{
+            .row{
+                .footer-div{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                }
+            }
+        }
     }
-    .h3-libros{
-        display: flex;
-        justify-content: center;
-        margin-left: 30px;
-        margin-right: 30px;
+}
+
+@media (max-width: 320px){
+
+    .main-productos{
+        .carousel{
+            .carousel-inner{
+                div{
+                    .d-block{
+                        height: 150px;
+                        width: 400px;
+                        margin-left: 5px;
+                    }
+                }
+            }
+        }
+
+        .containerFigure{ 
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            .figure{
+            margin-left: 5px;
+            margin-right: 5px;
+            }
+        
+            .figure-img{
+            width: 200px;
+            height: 250px;
+            }
+        }
+
+        .h3-libros{
+            display: flex;
+            justify-content: center;
+            margin-left: 30px;
+            margin-right: 30px;  
+        }
     }
-    .sucursales{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+
+    .main-sucursales{
+        .figure-sucursales{
+            .sucursales{
+                .figure-img-sucursales{
+                height: 200px;
+                width: 250px;
+                margin-bottom: 10px;
+                }
+
+                iframe{
+                height: 200px;
+                width: 250px;
+                margin-bottom: 10px;
+                }
+            }   
+        }    
     }
-    .sucursales iframe{
-        margin-bottom: 10px;
-    }
-    .sucursales img{
-        margin-bottom: 10px;
-    }
-    .img-libreria{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .img-libreria img{
-        margin-bottom: 10px;
-    }
-    .footer-div{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+
+    .main-nosotros{
+        .accordion{
+            div{
+                .accordion-collapse{
+                    .accordion-body{
+                        .img-libreria{
+                            img{
+                            width: 250px;
+                            height: 200px;
+                            margin-bottom: 10px;
+                            }
+                        }
+                    }
+                }
+            }
+        }    
     }
 }
