--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -1,4 +1,4 @@
-main{
+.main-index{
 
     .h3-sucursal{
         margin-left: 60px;
@@ -29,6 +29,71 @@ main{
             margin-right: 50px;
             margin-top: 15px;
             margin-bottom: 15px;
+        }
+    }
+    .carousel{
+        .carousel-inner{
+            div{
+                .d-block{
+                height: 400px;
+                width: 1200px;
+                margin-left: 70px;
+                }
+            }
+        }
+    }
+    
+    .containerFigure{
+        margin-top: 15px;
+        display: flex;
+        justify-content: space-around;
+        
+        .figure{
+            border-style: groove;
+            border-color: rgb(91, 191, 204);
+            padding-top: 10px;
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+            padding-left: 10px;
+            padding-right: 10px; 
+            &:hover{
+                transform: scale(1.10);
+                transition: 0.5s;
+            }
+    
+            .figure-img{
+                width: 200px;
+                height: 300px;
+            }
+    
+            .figure-caption{
+                display: flex;
+                justify-content: center;
+            }
+        }
+    }
+    
+    .h3-libros{
+        margin-left: 60px;
+        margin-right: 60px;
+        margin-top: 10px;
+        background-color: rgb(245, 247, 250);
+        
+    }
+    
+    .button{
+        display: flex;
+        justify-content: flex-end;
+        margin-right: 60px;
+        margin-bottom: 10px;
+    
+        .btn{
+            background-color: rgb(91, 191, 204);
+            color: white;
+            &:hover{
+                background-color: rgb(35, 78, 83);
+            }
         }
     }
 }
