--- a/scss/secciones/_productos.scss
+++ b/scss/secciones/_productos.scss
@@ -1,4 +1,4 @@
-main{
+.main-productos{
     .carousel{
         .carousel-inner{
             div{
@@ -17,16 +17,12 @@ main{
         justify-content: space-around;
         
         .figure{
-            border-style: groove;
-            border-color: rgb(91, 191, 204);
-            padding-top: 10px;
             display: flex;
             flex-direction: column;
             align-content: center;
-            padding-left: 10px;
-            padding-right: 10px; 
+            @extend%estiloproductos; 
             &:hover{
-                transform: scale(1.10);
+                transform: scale(1.05);
                 transition: 0.5s;
             }
     
@@ -46,7 +42,7 @@ main{
         margin-left: 60px;
         margin-right: 60px;
         margin-top: 10px;
-        background-color: rgb(245, 247, 250);
+        
         
     }
     
