--- a/scss/media-queris/_media-queris.scss
+++ b/scss/media-queris/_media-queris.scss
@@ -356,7 +356,7 @@
 
     .main-nosotros{
         .accordion{
-            div{
+            .accordion-item{
                 .accordion-collapse{
                     .accordion-body{
                         .img-libreria{
@@ -367,6 +367,7 @@
                             img{
                             width: 300px;
                             height: 250px;
+                            margin-bottom: 10px;
                             }
                         }
                     }
