--- a/scss/secciones/_nosotros.scss
+++ b/scss/secciones/_nosotros.scss
@@ -3,7 +3,7 @@
         margin-left: 10px;
         margin-right: 10px;
 
-        div{
+        .accordion-item{
             .accordion-collapse{
                 .accordion-body{
                     p{
