--- a/scss/media-queris/_media-queris.scss
+++ b/scss/media-queris/_media-queris.scss
@@ -1,60 +1,13 @@
-@media (max-width: 1440px){
-    .main-productos{
-        .carousel{
-            .carousel-inner{
-                div{
-                    .d-block{
-                    height: 450px;
-                    width: 1200px;
-                    margin-left: 70px;
-                    }
-                }
-            }
-        }
-    }
-
-    .main-sucursales{
-        .sucursales{
-            .figure-img-sucursales{
-            height: 400px;
-            width: 600px;
-            }
-            iframe{
-            height: 400px;
-            width: 600px;
-            }
-        }
-    }
-
-    .main-nosotros{
-        .accordion{
-            div{
-                .accordion-collapse{
-                    .accordion-body{
-                        .img-libreria{
-                            img{
-                            width: 600px;
-                            height: 350px;
-                            }
-                        }
-                    }
-                }
-            }
-        }    
-    }  
-}
-
-
 @media (max-width: 1024px){
     .main-index{
         .div-local{
             .img-local{
-                width: 450px;
+                width: 500px;
                 height: 300px;
             }
             
             .mapa-iframe{
-                width: 450px;
+                width: 500px;
                 height: 300px;
             }
         }
@@ -114,32 +67,38 @@
 
     .main-nosotros{
         .accordion{
-            div{
-                .accordion-collapse{
+            .accordion-item{
+               .accordion-collapse{
                     .accordion-body{
                         .img-libreria{
-                            img{
+                            .libreria{
                             width: 450px;
-                            height: 250px;
+                            height: 350px;
                             }
                         }
                     }
-                }
+                } 
             }
+            
         }    
     }
 }
 
 @media (max-width: 768px){
     .main-index{
+        .h3-sucursal{
+            margin-left: 15px;
+            margin-right: 15px; 
+
+        }
         .div-local{
             .img-local{
-                width: 300px;
+                width: 325px;
                 height: 250px;
             }
             
             .mapa-iframe{
-                width: 300px;
+                width: 325px;
                 height: 250px;
             }
         }
@@ -223,18 +182,23 @@
 
     .main-nosotros{
         .accordion{
-            div{
-                .accordion-collapse{
+            .accordion-item{
+               .accordion-collapse{
                     .accordion-body{
                         .img-libreria{
-                            img{
+                            .libreria{
                             width: 300px;
-                            height: 250px;
+                            height: 200px;
                             }
                         }
                     }
-                }
+                } 
             }
+            
+        }
+        .formulario{
+            width: 93%;
+            margin-left: 30px;
         }    
     }
 }
@@ -242,6 +206,13 @@
 @media (max-width: 425px){
 
     .main-index{
+        .h3-sucursal{
+            margin-left: 10px;
+            margin-right: 10px;
+            padding-top: 5px;
+            padding-bottom: 5px;
+        }
+
         .div-local{
             display: flex;
             flex-direction: column;
@@ -265,7 +236,7 @@
             .carousel-inner{
                 div{
                     .d-block{
-                        height: 150px;
+                        height: 200px;
                         width: 400px;
                         margin-left: 5px;
                     }
@@ -292,8 +263,10 @@
         .h3-libros{
             display: flex;
             justify-content: center;
-            margin-left: 30px;
-            margin-right: 30px;  
+            margin-left: 10px;
+            margin-right: 10px; 
+            padding-top: 5px;
+            padding-bottom: 5px; 
         }
     }
 
@@ -329,8 +302,10 @@
         .h3-libros{
             display: flex;
             justify-content: center;
-            margin-left: 30px;
-            margin-right: 30px;  
+            margin-left: 10px;
+            margin-right: 10px; 
+            padding-top: 5px;
+            padding-bottom: 5px;   
         }
     }
 
@@ -373,7 +348,11 @@
                     }
                 }
             }
-        }    
+        } 
+        .formulario{
+            width: 90%;
+            margin-left: 20px;
+        } 
     }
 
     footer{
