--- a/scss/secciones/_nosotros.scss
+++ b/scss/secciones/_nosotros.scss
@@ -1,7 +1,8 @@
 .main-nosotros{
     .accordion{
-        margin-left: 10px;
-        margin-right: 10px;
+        margin-top: 30px;
+        margin-left: 30px;
+        margin-right: 20px;
 
         .accordion-item{
             .accordion-collapse{
@@ -13,9 +14,10 @@
                         display: flex;
                         justify-content: space-around;
 
-                        .img{
+                        .libreria{
                             width: 500px;
-                            height: 250px;
+                            height: 350px;
+                            border-radius: 10px;
                         }
                     }
                 }
@@ -24,10 +26,10 @@
     } 
 
     .formulario{
-        margin-left: 15px;
-        margin-top: 15px;
+        margin-left: 30px;
+        margin-top: 30px;
         margin-bottom: 15px;
-        width: 98%;
+        width: 95%;
         @include formulario (rgb(176, 205, 216), 10px, 10px);
     }
 }
