--- a/scss/secciones/_productos.scss
+++ b/scss/secciones/_productos.scss
@@ -3,9 +3,11 @@
         .carousel-inner{
             div{
                 .d-block{
-                height: 400px;
-                width: 1200px;
-                margin-left: 70px;
+                    height: 400px;
+                    width: 95%;
+                    margin-top: 15px;
+                    margin-left: 30px;
+                    margin-right: 10px;
                 }
             }
         }
@@ -39,11 +41,10 @@
     }
     
     .h3-libros{
-        margin-left: 60px;
-        margin-right: 60px;
+        margin-left: 30px;
+        margin-right: 35px;
         margin-top: 10px;
-        
-        
+        background-color: rgb(160, 193, 194);;
     }
     
     .button{
@@ -58,6 +59,9 @@
             &:hover{
                 background-color: rgb(35, 78, 83);
             }
+        }
+        .btn-success{
+            border-color: rgb(66, 128, 134);
         }
     }
 }
