--- a/scss/secciones/_sucursales.scss
+++ b/scss/secciones/_sucursales.scss
@@ -1,7 +1,7 @@
 .main-sucursales{
    .figure-sucursales{
         border-style: groove;
-        border-color: rgb(187, 237, 243);
+        border-color: rgb(188, 221, 224);
         display: flex;
         flex-direction: column;
         align-content: center;
@@ -24,14 +24,18 @@
                 width: 600px;
             }
 
-            iframe{
+            .iframe{
                 height: 450px;
                 width: 600px;
             }
         }
-        
-        p{
+        .info-sucursales{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            p{
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            } 
         }    
     }
 }
