--- a/css/style.css
+++ b/css/style.css
@@ -13,24 +13,21 @@ header {
     header nav .container div form .btn:hover {
       background-color: #234e53; }
 
-footer {
+.footer-style {
   background-color: #85cccf; }
-  footer .container .row div .h3-footer {
+  .footer-style .container .row .footer-div .h3-footer {
     margin-top: 10px; }
-  footer .container .row div .ul-footer li {
-    margin-bottom: 10px;
-    list-style: none;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; }
-  footer .container .row div ul .img-redes {
+  .footer-style .container .row div ul .img-redes {
     border-radius: 50%;
     height: 50px;
-    width: 50px; }
-    footer .container .row div ul .img-redes:hover {
+    width: 50px;
+    margin-top: 15px; }
+    .footer-style .container .row div ul .img-redes:hover {
       transform: scale(1.1);
       transition: 00.5s; }
-  footer .container .row div ul p {
+  .footer-style .container .row div ul p {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; }
-  footer .footer-copyright {
+  .footer-style .footer-copyright {
     background-color: white; }
 
 body {
@@ -46,7 +43,7 @@ header nav .container div .d-flex .btn-outline-success {
   background-color: #becadd;
   display: flex;
   justify-content: center;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; }
+  background-image: linear-gradient(to right, #a0c1c2, #e9edf1); }
 
 .main-index .div-local {
   display: flex;
@@ -54,14 +51,14 @@ header nav .container div .d-flex .btn-outline-success {
   justify-content: space-around; }
   .main-index .div-local .img-local {
     width: 575px;
-    height: 400px;
+    height: 300px;
     margin-left: 40px;
     margin-top: 15px;
     margin-bottom: 15px;
     border-radius: 20px; }
   .main-index .div-local .mapa-iframe {
     width: 575px;
-    height: 400px;
+    height: 300px;
     margin-right: 50px;
     margin-top: 15px;
     margin-bottom: 15px;
@@ -96,12 +93,15 @@ header nav .container div .d-flex .btn-outline-success {
     .main-index .containerFigure .figure .figure-caption {
       display: flex;
       justify-content: center; }
+    .main-index .containerFigure .figure a {
+      text-decoration: none; }
 
 .main-index .h3-libros {
   margin-left: 30px;
   margin-right: 35px;
   margin-top: 10px;
-  background-color: #a0c1c2; }
+  background-color: #a0c1c2;
+  background-image: linear-gradient(to right, #a0c1c2, #e9edf1); }
 
 .main-index .button {
   display: flex;
@@ -121,7 +121,8 @@ header nav .container div .d-flex .btn-outline-success {
   margin-left: 30px;
   margin-right: 20px; }
   .main-nosotros .accordion .accordion-item .accordion-collapse .accordion-body p {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; }
+    margin-left: 30px;
+    margin-right: 30px; }
   .main-nosotros .accordion .accordion-item .accordion-collapse .accordion-body .img-libreria {
     display: flex;
     justify-content: space-around; }
@@ -139,30 +140,35 @@ header nav .container div .d-flex .btn-outline-success {
   border-radius: 10px;
   padding: 10px; }
 
+.main-sucursales .h3-libros {
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 10px;
+  background-color: #a0c1c2;
+  background-image: linear-gradient(to right, #a0c1c2, #e9edf1); }
+
 .main-sucursales .figure-sucursales {
   border-style: groove;
   border-color: #bcdde0;
   display: flex;
   flex-direction: column;
   align-content: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  margin-left: 15px;
-  margin-right: 15px; }
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 60px;
+  margin-right: 60px; }
   .main-sucursales .figure-sucursales .sucursales {
     display: flex;
     justify-content: space-around;
     margin-bottom: 15px; }
     .main-sucursales .figure-sucursales .sucursales .figure-img-sucursales {
-      height: 450px;
-      width: 600px; }
-    .main-sucursales .figure-sucursales .sucursales .iframe {
-      height: 450px;
-      width: 600px; }
+      height: 300px;
+      width: 500px; }
+    .main-sucursales .figure-sucursales .sucursales iframe {
+      height: 300px;
+      width: 500px; }
   .main-sucursales .figure-sucursales .info-sucursales {
     display: flex;
     flex-direction: column;
@@ -188,18 +194,24 @@ header nav .container div .d-flex .btn-outline-success {
     .main-productos .containerFigure .figure:hover {
       transform: scale(1.05);
       transition: 0.5s; }
+    .main-productos .containerFigure .figure a {
+      text-decoration: none; }
     .main-productos .containerFigure .figure .figure-img {
       width: 200px;
       height: 300px; }
     .main-productos .containerFigure .figure .figure-caption {
       display: flex;
-      justify-content: center; }
+      justify-content: center;
+      text-decoration: none; }
 
 .main-productos .h3-libros {
   margin-left: 30px;
   margin-right: 35px;
   margin-top: 10px;
-  background-color: #a0c1c2; }
+  background-color: #a0c1c2;
+  background-image: linear-gradient(to right, #a0c1c2, #e9edf1); }
+  .main-productos .h3-libros:hover {
+    background-color: linear-gradient left, #a0c1c2, white; }
 
 .main-productos .button {
   display: flex;
@@ -213,6 +225,9 @@ header nav .container div .d-flex .btn-outline-success {
       background-color: #234e53; }
   .main-productos .button .btn-success {
     border-color: #428086; }
+    .main-productos .button .btn-success a {
+      text-decoration: none;
+      color: white; }
 
 @media (max-width: 1024px) {
   .main-index .div-local .img-local {
@@ -281,12 +296,20 @@ header nav .container div .d-flex .btn-outline-success {
   .main-productos .h3-libros {
     margin-left: 15px;
     margin-right: 15px; }
-  .main-sucursales .figure-sucursales .sucursales .figure-img-sucursales {
-    height: 200px;
-    width: 300px; }
-  .main-sucursales .figure-sucursales .sucursales iframe {
-    height: 200px;
-    width: 300px; }
+  .main-sucursales .h3-libros {
+    margin-left: 10px;
+    margin-right: 10px; }
+  .main-sucursales .figure-sucursales {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 5px; }
+    .main-sucursales .figure-sucursales .sucursales .figure-img-sucursales {
+      height: 200px;
+      width: 300px; }
+    .main-sucursales .figure-sucursales .sucursales iframe {
+      height: 200px;
+      width: 300px; }
   .main-nosotros .accordion .accordion-item .accordion-collapse .accordion-body .img-libreria .libreria {
     width: 300px;
     height: 200px; }
@@ -367,6 +390,8 @@ header nav .container div .d-flex .btn-outline-success {
       height: 200px;
       width: 300px;
       margin-bottom: 10px; }
+  .main-sucursales .figure-sucursales .info-sucursales {
+    align-items: flex-start; }
   .main-nosotros .accordion .accordion-item .accordion-collapse .accordion-body .img-libreria {
     display: flex;
     flex-direction: column;
@@ -381,7 +406,7 @@ header nav .container div .d-flex .btn-outline-success {
   footer .container .row .footer-div {
     display: flex;
     flex-direction: column;
-    align-items: center; } }
+    align-items: stretch; } }
 
 @media (max-width: 320px) {
   .main-productos .carousel .carousel-inner div .d-block {
