--- a/scss/secciones/_productos.scss
+++ b/scss/secciones/_productos.scss
@@ -27,6 +27,10 @@
                 transform: scale(1.05);
                 transition: 0.5s;
             }
+
+            a{
+                text-decoration: none;
+            }
     
             .figure-img{
                 width: 200px;
@@ -36,6 +40,7 @@
             .figure-caption{
                 display: flex;
                 justify-content: center;
+                text-decoration: none;
             }
         }
     }
@@ -44,7 +49,13 @@
         margin-left: 30px;
         margin-right: 35px;
         margin-top: 10px;
-        background-color: rgb(160, 193, 194);;
+        background-color: rgb(160, 193, 194);
+        background-image: linear-gradient(to right, rgb(160, 193, 194), rgb(233, 237, 241));
+
+
+        &:hover{
+            background-color: linear-gradient (left, rgb(160, 193, 194), white);
+        }
     }
     
     .button{
@@ -62,6 +73,10 @@
         }
         .btn-success{
             border-color: rgb(66, 128, 134);
+            a{
+                text-decoration: none;
+                color: white;
+            }
         }
     }
 }
