--- a/scss/secciones/_sucursales.scss
+++ b/scss/secciones/_sucursales.scss
@@ -1,18 +1,24 @@
 .main-sucursales{
+    .h3-libros{
+        margin-left: 50px;
+        margin-right: 50px;
+        margin-top: 10px;
+        background-color: rgb(160, 193, 194);;
+        background-image: linear-gradient(to right, rgb(160, 193, 194), rgb(233, 237, 241));
+    }
+
    .figure-sucursales{
         border-style: groove;
         border-color: rgb(188, 221, 224);
         display: flex;
         flex-direction: column;
         align-content: center;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        padding-left: 10px;
-        padding-right: 10px; 
-        margin-top: 15px;
-        margin-bottom: 15px;
-        margin-left: 15px;
-        margin-right: 15px;
+        padding-top: 10px;
+        padding-bottom: 10px; 
+        margin-top: 10px;
+        margin-bottom: 10px;
+        margin-left: 60px;
+        margin-right: 60px;
 
         .sucursales{
             display: flex;
@@ -20,13 +26,13 @@
             margin-bottom: 15px;  
         
             .figure-img-sucursales{
-                height: 450px;
-                width: 600px;
+                height: 300px;
+                width: 500px;
             }
 
-            .iframe{
-                height: 450px;
-                width: 600px;
+            iframe{
+                height: 300px;
+                width: 500px;
             }
         }
         .info-sucursales{
