--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,3 +11,4 @@
 @import './secciones/productos';
 @import './media-queris/media-queris';
 @import './header-footer/header';
+@import './secciones/carrito.scss';
