--- a/scss/secciones/_productos.scss
+++ b/scss/secciones/_productos.scss
@@ -41,6 +41,7 @@
                 display: flex;
                 justify-content: center;
                 text-decoration: none;
+                margin-bottom: 0px;
             }
         }
     }
